bk_ida/gccida/g3/adjust_address_1
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_address_1/src/emit-rtl.c:2439:36: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  adjust_address_1( rtx memref, machine_mode mode, __int64 offset, int validate, int adjust) 
                                   ^
                                   enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_address_1/src/emit-rtl.c:2443:4: error: expected ';' after expression
rtx v10; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_address_1/src/emit-rtl.c:2443:5: error: use of undeclared identifier 'v10'
rtx v10; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_address_1/src/emit-rtl.c:2446:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_address_1/src/emit-rtl.c:2447:4: error: expected ';' after expression
rtx v14; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_address_1/src/emit-rtl.c:2447:5: error: use of undeclared identifier 'v14'
rtx v14; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_address_1/src/emit-rtl.c:2451:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_address_1/src/emit-rtl.c:2453:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_address_1/src/emit-rtl.c:2455:6: error: use of undeclared identifier 'slot_with_hash'
rtx *slot_with_hash; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_address_1/src/emit-rtl.c:2456:6: error: use of undeclared identifier 'v24'
rtx *v24; // r15 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_address_1/src/emit-rtl.c:2457:4: error: expected ';' after expression
rtx v25; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_address_1/src/emit-rtl.c:2457:5: error: use of undeclared identifier 'v25'
rtx v25; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_address_1/src/emit-rtl.c:2463:4: error: expected ';' after expression
rtx v31; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_address_1/src/emit-rtl.c:2463:5: error: use of undeclared identifier 'v31'
rtx v31; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_address_1/src/emit-rtl.c:2467:4: error: expected ';' after expression
rtx v35; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_address_1/src/emit-rtl.c:2467:5: error: use of undeclared identifier 'v35'
rtx v35; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_address_1/src/emit-rtl.c:2468:4: error: expected ';' after expression
rtx addra; // [rsp+8h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_address_1/src/emit-rtl.c:2468:5: error: use of undeclared identifier 'addra'
rtx addra; // [rsp+8h] [rbp-50h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_address_1/src/emit-rtl.c:2471:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( __int64)memref[1]; 
               ^~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/adjust_address_1/src/obj/emit-rtl.o] Error 1
